# PlayerLink

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  known.json  settings.example.json  settings.json
.github/workflows/: build-appimage.yml  build.yml
cmake/: create_resources.cmake
linux/AppDir/usr/share/applications/: PlayerLink.desktop
osx/: Info.plist  MediaRemote.js  MediaRemote.scptd  icon.icns
src/: MediaRemote.hpp  backend.hpp  lastfm.hpp  main.cpp  utils.hpp
src/backends/: darwin.cpp  darwin.mm  linux.cpp  windows.cpp
win/: app_icon.rc
