cmake_minimum_required (VERSION 3.8)
project ("globalRPC")
file(GLOB_RECURSE SOURCES "src/*.cpp")
add_executable (rpc ${SOURCES})
set_property(TARGET rpc PROPERTY CXX_STANDARD 20)
add_subdirectory("vendor")
target_link_libraries(rpc PUBLIC WindowsApp discord-rpc libcurl_static mbedcrypto mbedx509 mbedtls)
target_include_directories(rpc PRIVATE vendor)